--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,8 +23,10 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: "3.10"
-    - name: setup
+    - name: Setup
       run: python setup.py install
-    - name: test
+    - name: Test HW1
       run: python HW1/src/script.py -g all
+    - name: Test HW2
+      run: python HW2/src/script.py -g all -f ./HW2/etc/data/auto93.csv
     - run: echo "🍏 This job's status is ${{ job.status }}."
