--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,5 +30,8 @@ jobs:
       run: python HW1/src/script.py -g all
     - name: Test HW2
       id: test_hw2
-      run: python HW2/src/script.py -g all -f ./HW2/etc/data/auto93.csv\
+      run: python HW2/src/script.py -g all -f ./HW2/etc/data/auto93.csv
+    - name: Test HW3
+      id: test_hw3
+      run: python HW3/src/script.py -g all -f ./HW3/etc/data/auto93.csv
     - run: echo "🍏 This job's status is ${{ job.status }}."
