--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,14 +27,14 @@ jobs:
       run: python setup.py install
     - name: Test HW1
       id: test_hw1
-      run: python HW1/src/script.py -g all
+      run: python HW1/src/main.py -g all
     - name: Test HW2
       id: test_hw2
-      run: python HW2/src/script.py -g all -f ./HW2/etc/data/auto93.csv
+      run: python HW2/src/main.py -g all -f ./HW2/etc/data/auto93.csv
     - name: Test HW3
       id: test_hw3
-      run: python HW3/src/script.py -g all -f ./HW3/etc/data/auto93.csv
+      run: python HW3/src/main.py -g all -f ./HW3/etc/data/auto93.csv
     - name: Test HW4
       id: test_hw4
-      run: python HW4/src/script.py -g all -f ./HW4/etc/data/repgrid1.csv
+      run: python HW4/src/main.py -g all -f ./HW4/etc/data/repgrid1.csv
     - run: echo "🍏 This job's status is ${{ job.status }}."
