--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,6 +23,10 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: "3.10"
+    - name: Install Dependencies
+      run: |
+        python -m pip install --upgrade pip
+        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Setup
       run: python setup.py install
     - name: Test HW1
@@ -43,4 +47,7 @@ jobs:
     - name: Test HW6
       id: test_hw6
       run: python HW6/src/main.py -g all -f ./HW6/etc/data/auto93.csv
+    - name: Test HW7
+      id: test_hw7
+      run: python HW7/src/main.py -g all
     - run: echo "🍏 This job's status is ${{ job.status }}."
