--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,3 @@
 # Apply override to all files in the directory
 (^|/)docs/** linguist-documentation
-HW?/docs/** linguist-documentation
+HW*/docs/** linguist-documentation
