--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,7 @@
 # Apply override to all files in the directory
 (^|/)docs/** linguist-documentation
 HW*/docs/** linguist-documentation
+HW*/docs/* linguist-documentation
+(^|/)docs/* linguist-documentation
+HW*/docs/ linguist-documentation
+(^|/)docs/ linguist-documentation
